# WGF3

./: CMakeLists.txt  README.md
GraphicObjects/BindGroup/: BindGroup.h
GraphicObjects/Buffer/: BaseBuffer.h  Buffer.h  BufferLayout.h
GraphicObjects/Shader/: Shader.cpp  Shader.h
GraphicObjects/Textures/: BaseTexture.h  Image.cpp  Image.h  RAIITexture.h  RAIITextureView.h  Texture.h  Texture1D.h  Texture2D.cpp  Texture2D.h  Texture2DArray.h  Texture3D.h  TextureView.h
Pipeline/: ComputePipeline.h  ComputePipelineBuilder.h  Pipeline.h  PipelineBuilder.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineBuilder.h
RenderPass/: RenderPass.cpp  RenderPass.h  RenderPassFactory.h
Utilities/: Differences.h  Logging.cpp  Object3D.cpp  Object3D.h  Timer.h
Utilities/Cameras/: Camera.h  TurnTableCamera.h
WGFinstance/: Adapter.cpp  Adapter.h  AppWindow.cpp  AppWindow.h  Device.cpp  Device.h  DeviceLimits.h  Framework.cpp  Framework.h  WindowParameters.h
